--- a/trellis-gcp-api/docker-compose.yml
+++ b/trellis-gcp-api/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # API Service
   api:
@@ -20,9 +18,10 @@ services:
       - SECRET_KEY=dev-secret-key-change-in-production
       - RATE_LIMIT_PER_MINUTE=60
     volumes:
-      - ./src:/app/src:ro
-      - ./configs:/app/configs:ro
+      - ./src:/app/src
+      - ./configs:/app/configs
       - api_data:/app/data
+    command: ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     depends_on:
       - redis
       - minio
@@ -35,40 +34,6 @@ services:
       timeout: 10s
       retries: 3
 
-  # TRELLIS Worker Service (GPU-enabled)
-  worker:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.worker
-    environment:
-      - REDIS_URL=redis://redis:6379
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin
-      - TRELLIS_MODEL_PATH=microsoft/TRELLIS-image-large
-      - TRELLIS_TEXT_MODEL_PATH=microsoft/TRELLIS-text-large
-      - TRELLIS_CACHE_DIR=/tmp/trellis-cache
-      - SPCONV_ALGO=native
-      - ATTN_BACKEND=flash-attn
-      - CUDA_VISIBLE_DEVICES=0
-    volumes:
-      - ./src:/app/src:ro
-      - trellis_cache:/tmp/trellis-cache
-      - trellis_models:/tmp/trellis-models
-      - trellis_output:/tmp/trellis-output
-    depends_on:
-      - redis
-      - minio
-    networks:
-      - trellis-network
-    restart: unless-stopped
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
 
   # Redis for job queue and caching
   redis:
@@ -90,8 +55,8 @@ services:
   minio:
     image: minio/minio:latest
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "9100:9000"
+      - "9101:9001"
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
@@ -125,28 +90,52 @@ services:
       exit 0;
       "
 
-  # Nginx for load balancing and reverse proxy (optional)
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
+  # Integrated Worker for processing jobs
+  worker:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.worker-mock
+    container_name: trellis-gcp-api-worker-1
+    restart: unless-stopped
+    environment:
+      - PYTHONPATH=/app
+      - ENVIRONMENT=development
+      - REDIS_URL=redis://redis:6379
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
     volumes:
-      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./src:/app/src
     depends_on:
+      - redis
       - api
     networks:
       - trellis-network
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "print('Worker running')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    command: python simple_job_processor.py
+
+  # Redis Commander for Redis management (dev tools)
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+      - redis
+    networks:
+      - trellis-network
     profiles:
-      - production
+      - dev-tools
 
 volumes:
   api_data:
   redis_data:
   minio_data:
-  trellis_cache:
-  trellis_models:
-  trellis_output:
 
 networks:
   trellis-network:
