--- a/trellis-gcp-api/requirements-api.txt
+++ b/trellis-gcp-api/requirements-api.txt
@@ -18,6 +18,7 @@ structlog==23.2.0
 tenacity==8.2.3
 pillow==10.1.0
 aiofiles==23.2.1
+psutil==5.9.6
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
