--- a/trellis-gcp-api/docker/Dockerfile.worker-trellis
+++ b/trellis-gcp-api/docker/Dockerfile.worker-trellis
@@ -1,9 +1,9 @@
-# TRELLIS Worker with fallback procedural generation (CPU-only for development)
+# TRELLIS Worker with CPU-only PyTorch for development
 FROM python:3.10-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app:/app/TRELLIS
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install system dependencies
@@ -12,10 +12,36 @@ RUN apt-get update && apt-get install -y \
     wget \
     curl \
     build-essential \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
+
+# Install PyTorch CPU-only and basic ML dependencies
+RUN pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+# Install additional TRELLIS dependencies
+RUN pip install --no-cache-dir \
+    numpy \
+    pillow \
+    opencv-python \
+    scipy \
+    scikit-image \
+    trimesh \
+    transformers \
+    diffusers \
+    accelerate \
+    xformers \
+    omegaconf \
+    einops \
+    imageio \
+    imageio-ffmpeg
 
 # Install basic dependencies for procedural generation
 COPY requirements-worker-mock.txt .
