--- a/trellis-gcp-api/requirements-worker-mock.txt
+++ b/trellis-gcp-api/requirements-worker-mock.txt
@@ -4,7 +4,8 @@ pydantic==2.5.2
 pydantic-settings==2.1.0
 fastapi==0.104.1
 minio==7.2.0
-transformers==4.36.0
-torch==2.1.0
 numpy==1.24.3
-sentence-transformers==2.2.2
+scipy==1.10.1
+trimesh==4.0.5
+scikit-image==0.21.0
+noise==1.2.2
